sfdx-source/trouble/objects/WorkflowRun__c/WorkflowRun__c.object-meta.xml
<CustomObject>
    <description>Captures workflow run information for Continuous Integration/Continuous Delivery (CI/CD) builds from the department of veteran affairs GitHub repositories</description>
    <label>WorkflowRun</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>WorkflowRun Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkflowRuns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>