sfdx-source/trouble/objects/WorkflowRun__c/fields/SalesforceOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesforceOrg__c</fullName>
    <description>The Salesforce Org the workflow run is associated with</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Salesforce Org the workflow run is associated with</inlineHelpText>
    <label>SalesforceOrg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>