sfdx-source/trouble/objects/WorkflowRun__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Represents the Date the WorkflowRun was started</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Represents the Date the WorkflowRun was started</inlineHelpText>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>