sfdx-source/trouble/objects/WorkflowRun__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Captures the start time of the workflow run</description>
    <inlineHelpText>Captures the start time of the workflow run</inlineHelpText>
    <label>StartTime</label>
    <type>Time</type>
</CustomField>