sfdx-source/trouble/objects/WorkflowRun__c/fields/WasSuccessful__c.field-meta.xml
<CustomField>
    <fullName>WasSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents whether or not a workflow run was successful</description>
    <inlineHelpText>Represents whether or not a workflow run was successful</inlineHelpText>
    <label>WasSuccessful</label>
    <type>Checkbox</type>
</CustomField>